--- a/vendor.conf
+++ b/vendor.conf
@@ -1,7 +1,7 @@
 # the following lines are in sorted order, FYI
 github.com/Azure/go-ansiterm d6e3b3328b783f23731bc4d058875b0371ff8109
-github.com/Microsoft/hcsshim 349e8fc211f3202a09255203eae9e910afab060f C:\Users\kevpar\Source\go\src\github.com\Microsoft\hcsshim
-github.com/Microsoft/go-winio 3fe4fa31662f6ede2353d913e93907b8e096e0b6
+github.com/Microsoft/hcsshim 36f84aba3b470ac9b482d15f9438644a57f2fc02 C:\Users\kevpar\Source\Repos\hcsshim
+github.com/Microsoft/go-winio 12afdbf8b879f9ce020255d4dea63525b16518f5
 github.com/docker/libtrust 9cbd2a1374f46905c68a4eb3694a130610adc62a
 github.com/go-check/check 4ed411733c5785b40214c70bce814c3a3a689609 https://github.com/cpuguy83/check.git
 github.com/golang/gddo 9b12a26f3fbd7397dee4e20939ddca719d840d2a
